--- a/hacms/ui/demo.ui
+++ b/hacms/ui/demo.ui
@@ -1120,6 +1120,11 @@ Controller</string>
       <height>26</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
     <item>
      <property name="text">
       <string>Constant</string>
