--- a/hacms/ui/about.ui
+++ b/hacms/ui/about.ui
@@ -2,16 +2,34 @@
 <ui version="4.0">
  <class>Dialog</class>
  <widget class="QDialog" name="Dialog">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>372</width>
-    <height>213</height>
+    <height>221</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>372</width>
+    <height>221</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>372</width>
+    <height>221</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>About HACMS Demo</string>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
   </property>
   <widget class="QLabel" name="aboutText">
    <property name="geometry">
