--- a/hacms/ui/demo.ui
+++ b/hacms/ui/demo.ui
@@ -271,14 +271,6 @@ Controller</string>
       <property name="styleSheet">
        <string notr="true">background-color: white;</string>
       </property>
-      <zorder>reLabel</zorder>
-      <zorder>leLabel</zorder>
-      <zorder>leLabelColor</zorder>
-      <zorder>reLabelColor</zorder>
-      <zorder>reLabel</zorder>
-      <zorder>leLabel</zorder>
-      <zorder>leLabelColor</zorder>
-      <zorder>reLabelColor</zorder>
      </widget>
      <widget class="QFrame" name="cmdLabelColor">
       <property name="geometry">
@@ -754,22 +746,6 @@ Controller</string>
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QWidget" name="rightPlot" native="true">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>550</x>
-        <y>40</y>
-        <width>421</width>
-        <height>441</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: white;</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="inputPlotLabel">
       <property name="enabled">
        <bool>false</bool>
@@ -993,6 +969,22 @@ Controller</string>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
+      </property>
+     </widget>
+     <widget class="PlotWidget" name="rightPlot">
+      <property name="geometry">
+       <rect>
+        <x>560</x>
+        <y>40</y>
+        <width>411</width>
+        <height>441</height>
+       </rect>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
      </widget>
     </widget>
@@ -1232,6 +1224,13 @@ Controller</string>
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>PlotWidget</class>
+   <extends>QGraphicsView</extends>
+   <header>pyqtgraph</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>landsharkButton</tabstop>
   <tabstop>ccButton</tabstop>
