--- a/hacms/ui/demo.ui
+++ b/hacms/ui/demo.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1290</width>
-    <height>715</height>
+    <width>1275</width>
+    <height>694</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
    <widget class="QPushButton" name="landsharkButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>20</y>
       <width>241</width>
       <height>91</height>
@@ -50,7 +50,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>280</y>
       <width>241</width>
       <height>91</height>
@@ -80,7 +80,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>380</y>
       <width>111</width>
       <height>151</height>
@@ -106,10 +106,10 @@ Controller</string>
    <widget class="QPlainTextEdit" name="console">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>540</y>
       <width>1251</width>
-      <height>121</height>
+      <height>101</height>
      </rect>
     </property>
     <property name="font">
@@ -128,7 +128,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>120</y>
       <width>241</width>
       <height>91</height>
@@ -157,7 +157,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>220</y>
       <width>241</width>
       <height>51</height>
@@ -184,7 +184,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>270</x>
       <y>10</y>
       <width>991</width>
       <height>521</height>
@@ -209,7 +209,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>0</x>
         <y>300</y>
         <width>181</width>
         <height>71</height>
@@ -222,7 +222,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>70</x>
         <y>200</y>
         <width>51</width>
         <height>20</height>
@@ -246,7 +246,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>200</x>
         <y>250</y>
         <width>51</width>
         <height>16</height>
@@ -256,26 +256,10 @@ Controller</string>
        <string>Output</string>
       </property>
      </widget>
-     <widget class="QWidget" name="outputPlot" native="true">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>280</y>
-        <width>331</width>
-        <height>201</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: white;</string>
-      </property>
-     </widget>
      <widget class="QFrame" name="cmdLabelColor">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>300</x>
         <y>10</y>
         <width>21</width>
         <height>21</height>
@@ -297,7 +281,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>10</x>
         <y>200</y>
         <width>61</width>
         <height>51</height>
@@ -311,7 +295,7 @@ Controller</string>
      <widget class="QLabel" name="gpsLabel">
       <property name="geometry">
        <rect>
-        <x>350</x>
+        <x>340</x>
         <y>250</y>
         <width>51</width>
         <height>21</height>
@@ -332,7 +316,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>-10</x>
         <y>150</y>
         <width>61</width>
         <height>20</height>
@@ -356,7 +340,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>0</x>
         <y>280</y>
         <width>181</width>
         <height>20</height>
@@ -380,7 +364,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>0</x>
         <y>410</y>
         <width>181</width>
         <height>71</height>
@@ -393,7 +377,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>140</x>
+        <x>130</x>
         <y>150</y>
         <width>41</width>
         <height>21</height>
@@ -408,27 +392,10 @@ Controller</string>
        <string>Set</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="saveRightPlotButton">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>630</x>
-        <y>10</y>
-        <width>31</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="icon">
-       <iconset resource="images.qrc">
-        <normaloff>:/images/folder_image.png</normaloff>:/images/folder_image.png</iconset>
-      </property>
-     </widget>
      <widget class="QLabel" name="cmdLabel">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>330</x>
         <y>10</y>
         <width>51</width>
         <height>21</height>
@@ -446,7 +413,7 @@ Controller</string>
      <widget class="QLabel" name="leLabel">
       <property name="geometry">
        <rect>
-        <x>430</x>
+        <x>420</x>
         <y>250</y>
         <width>31</width>
         <height>21</height>
@@ -464,7 +431,7 @@ Controller</string>
      <widget class="QLabel" name="refLabel2">
       <property name="geometry">
        <rect>
-        <x>830</x>
+        <x>820</x>
         <y>10</y>
         <width>41</width>
         <height>21</height>
@@ -482,7 +449,7 @@ Controller</string>
      <widget class="QFrame" name="refLabelColor2">
       <property name="geometry">
        <rect>
-        <x>800</x>
+        <x>790</x>
         <y>10</y>
         <width>21</width>
         <height>21</height>
@@ -504,7 +471,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>550</x>
+        <x>540</x>
         <y>10</y>
         <width>71</width>
         <height>16</height>
@@ -520,7 +487,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>0</x>
         <y>50</y>
         <width>101</width>
         <height>39</height>
@@ -544,7 +511,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>10</x>
         <y>9</y>
         <width>171</width>
         <height>31</height>
@@ -562,47 +529,13 @@ Controller</string>
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QPushButton" name="saveOutputPlotButton">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>250</y>
-        <width>31</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="icon">
-       <iconset resource="images.qrc">
-        <normaloff>:/images/folder_image.png</normaloff>:/images/folder_image.png</iconset>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="saveInputPlotButton">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>260</x>
-        <y>10</y>
-        <width>31</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="icon">
-       <iconset resource="images.qrc">
-        <normaloff>:/images/folder_image.png</normaloff>:/images/folder_image.png</iconset>
-      </property>
-     </widget>
      <widget class="QPushButton" name="setSpeedButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>110</x>
         <y>50</y>
         <width>71</width>
         <height>41</height>
@@ -620,7 +553,7 @@ Controller</string>
      <widget class="Line" name="line_2">
       <property name="geometry">
        <rect>
-        <x>190</x>
+        <x>180</x>
         <y>10</y>
         <width>20</width>
         <height>471</height>
@@ -636,7 +569,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>60</x>
+        <x>50</x>
         <y>120</y>
         <width>61</width>
         <height>21</height>
@@ -657,7 +590,7 @@ Controller</string>
      <widget class="QLabel" name="speedLabel">
       <property name="geometry">
        <rect>
-        <x>710</x>
+        <x>700</x>
         <y>10</y>
         <width>71</width>
         <height>21</height>
@@ -678,7 +611,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>70</x>
         <y>220</y>
         <width>51</width>
         <height>20</height>
@@ -704,7 +637,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>60</x>
+        <x>50</x>
         <y>150</y>
         <width>61</width>
         <height>21</height>
@@ -728,7 +661,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>0</x>
         <y>390</y>
         <width>181</width>
         <height>20</height>
@@ -752,7 +685,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>200</x>
         <y>10</y>
         <width>41</width>
         <height>16</height>
@@ -765,7 +698,7 @@ Controller</string>
      <widget class="QFrame" name="speedLabelColor">
       <property name="geometry">
        <rect>
-        <x>680</x>
+        <x>670</x>
         <y>10</y>
         <width>21</width>
         <height>21</height>
@@ -784,7 +717,7 @@ Controller</string>
      <widget class="QLabel" name="refLabel">
       <property name="geometry">
        <rect>
-        <x>440</x>
+        <x>430</x>
         <y>10</y>
         <width>41</width>
         <height>21</height>
@@ -799,29 +732,13 @@ Controller</string>
        <string>REF</string>
       </property>
      </widget>
-     <widget class="QWidget" name="inputPlot" native="true">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>40</y>
-        <width>331</width>
-        <height>201</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: white;</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="setKPButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="geometry">
        <rect>
-        <x>140</x>
+        <x>130</x>
         <y>120</y>
         <width>41</width>
         <height>21</height>
@@ -839,7 +756,7 @@ Controller</string>
      <widget class="QLabel" name="reLabel">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>490</x>
         <y>250</y>
         <width>31</width>
         <height>21</height>
@@ -857,7 +774,7 @@ Controller</string>
      <widget class="QFrame" name="refLabelColor">
       <property name="geometry">
        <rect>
-        <x>410</x>
+        <x>400</x>
         <y>10</y>
         <width>21</width>
         <height>21</height>
@@ -879,7 +796,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>120</x>
         <y>200</y>
         <width>61</width>
         <height>51</height>
@@ -896,7 +813,7 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>-10</x>
         <y>120</y>
         <width>61</width>
         <height>20</height>
@@ -917,7 +834,7 @@ Controller</string>
      <widget class="QFrame" name="reLabelColor">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>460</x>
         <y>250</y>
         <width>21</width>
         <height>21</height>
@@ -936,7 +853,7 @@ Controller</string>
      <widget class="QFrame" name="leLabelColor">
       <property name="geometry">
        <rect>
-        <x>400</x>
+        <x>390</x>
         <y>250</y>
         <width>21</width>
         <height>21</height>
@@ -955,7 +872,7 @@ Controller</string>
      <widget class="QFrame" name="gpsLabelColor">
       <property name="geometry">
        <rect>
-        <x>320</x>
+        <x>310</x>
         <y>250</y>
         <width>21</width>
         <height>21</height>
@@ -974,10 +891,42 @@ Controller</string>
      <widget class="PlotWidget" name="rightPlot">
       <property name="geometry">
        <rect>
-        <x>560</x>
+        <x>540</x>
         <y>40</y>
-        <width>411</width>
+        <width>431</width>
         <height>441</height>
+       </rect>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+     </widget>
+     <widget class="PlotWidget" name="inputPlot">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>40</y>
+        <width>331</width>
+        <height>201</height>
+       </rect>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+     </widget>
+     <widget class="PlotWidget" name="outputPlot">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>280</y>
+        <width>331</width>
+        <height>201</height>
        </rect>
       </property>
       <property name="verticalScrollBarPolicy">
@@ -1093,7 +1042,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>130</x>
       <y>459</y>
       <width>131</width>
       <height>21</height>
@@ -1114,7 +1063,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>130</x>
       <y>390</y>
       <width>121</width>
       <height>26</height>
@@ -1147,7 +1096,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>130</x>
       <y>489</y>
       <width>131</width>
       <height>21</height>
@@ -1168,7 +1117,7 @@ Controller</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>130</x>
       <y>429</y>
       <width>131</width>
       <height>21</height>
@@ -1189,7 +1138,7 @@ Controller</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1290</width>
+     <width>1275</width>
      <height>22</height>
     </rect>
    </property>
@@ -1245,9 +1194,6 @@ Controller</string>
   <tabstop>setKIButton</tabstop>
   <tabstop>setTrimLeftButton</tabstop>
   <tabstop>setTrimRightButton</tabstop>
-  <tabstop>saveInputPlotButton</tabstop>
-  <tabstop>saveOutputPlotButton</tabstop>
-  <tabstop>saveRightPlotButton</tabstop>
   <tabstop>console</tabstop>
   <tabstop>tabWidget</tabstop>
   <tabstop>waypointListView</tabstop>
