Set fixed size for window.

--- a/hacms/ui/demo.ui
+++ b/hacms/ui/demo.ui
@@ -8,8 +8,20 @@
     <x>0</x>
     <y>0</y>
     <width>1275</width>
-    <height>694</height>
+    <height>693</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1275</width>
+    <height>693</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1275</width>
+    <height>693</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>HACMS Demo</string>
