--- a/hacms/ui/demo.ui
+++ b/hacms/ui/demo.ui
@@ -235,7 +235,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>200</y>
+        <y>210</y>
         <width>51</width>
         <height>20</height>
        </rect>
@@ -294,7 +294,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>200</y>
+        <y>210</y>
         <width>61</width>
         <height>51</height>
        </rect>
@@ -329,7 +329,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>-10</x>
-        <y>150</y>
+        <y>140</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -390,7 +390,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>150</y>
+        <y>140</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -582,7 +582,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>50</x>
-        <y>120</y>
+        <y>110</y>
         <width>61</width>
         <height>21</height>
        </rect>
@@ -624,7 +624,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>220</y>
+        <y>230</y>
         <width>51</width>
         <height>20</height>
        </rect>
@@ -650,7 +650,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>50</x>
-        <y>150</y>
+        <y>140</y>
         <width>61</width>
         <height>21</height>
        </rect>
@@ -751,7 +751,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>120</y>
+        <y>110</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -809,7 +809,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>200</y>
+        <y>210</y>
         <width>61</width>
         <height>51</height>
        </rect>
@@ -826,7 +826,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>-10</x>
-        <y>120</y>
+        <y>110</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -946,6 +946,75 @@ Controller</string>
       </property>
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="rateEdit">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>170</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>50</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="setRateButton">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>170</y>
+        <width>41</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Set</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="rateLabel">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>-10</x>
+        <y>170</y>
+        <width>61</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Rate</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </widget>
