--- a/hacms/ui/demo.ui
+++ b/hacms/ui/demo.ui
@@ -990,7 +990,7 @@ Controller</string>
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="addWaypointButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
@@ -1006,13 +1006,13 @@ Controller</string>
        <string>+</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="removeWaypointButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>60</x>
         <y>450</y>
         <width>41</width>
         <height>32</height>
@@ -1022,17 +1022,22 @@ Controller</string>
        <string>-</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="uploadWaypointsButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>160</x>
         <y>450</y>
-        <width>91</width>
-        <height>32</height>
+        <width>61</width>
+        <height>31</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Upload</string>
@@ -1046,6 +1051,27 @@ Controller</string>
         <width>741</width>
         <height>471</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="clearWaypointsButton">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>450</y>
+        <width>51</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Clear</string>
       </property>
      </widget>
     </widget>
